retab del test.conf

--- a/baseliner_test.conf
+++ b/baseliner_test.conf
@@ -47,37 +47,38 @@ email_override q74611x@correo.interno
     verify_address 0
 </session>
 
+# LDAP
 <authentication>
     default_realm ldap
     <realms>
-		<local>
+        <local>
             <credential>
-				class Password
-				password_field password
-				password_type clear
+                class Password
+                password_field password
+                password_type clear
             </credential>
-			<store>
-				class Minimal
-				<users>
-					<root>
-						password admin
-					</root>
-					<admin>
-					    password admin
-					</admin>
-				</users>
-			</store>
-		</local>
-		<none>
-			<credential>
+            <store>
+                class Minimal
+                <users>
+                    <root>
+                        password admin
+                    </root>
+                    <admin>
+                        password admin
+                    </admin>
+                </users>
+            </store>
+        </local>
+        <none>
+            <credential>
                 class Password
                 password_field password
                 password_type none
-			</credential>
-			<store>
-				class Null
-			</store>
-		</none>
+            </credential>
+            <store>
+                class Null
+            </store>
+        </none>
 
         <ldap>
             <store>
