--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -6,6 +6,7 @@ logo_filename logo_ante.png
 dec_key Honorificabilitudinitatibus
 db_retry -1	 # Infinito
 db_retry_frequency 15
+bde_scm_web http://wbeante.bde.es
 
 email_override q74611x@correo.interno
 email_override q74612x@correo.interno
