--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -9,6 +9,7 @@ logo_filename logo.png
 dec_key 1234567
 db_retry -1  # Infinito
 db_retry_frequency 15
+bde_scm_web http://wbeprod.bde.es
 
 email_override q74611x@correo.interno
 email_override q74612x@correo.interno
