--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -4,7 +4,7 @@ default_lang es
 favicon /static/themes/bde/favicon.ico
 login_logo /static/themes/bde/images/logo_big.jpg
 show_portal 1
-toolbar_height 42
+toolbar_height 33
 db_retry -1   # intentos de conexion a bbdd infinitos
 db_retry_frequency 30   # a cada 30 segundos
 job_runner service.job.runner.chained.rule
@@ -41,6 +41,10 @@ job_runner service.job.runner.chained.rule
     show_dashboard 0
     show_no_cal 0
     show_job_search_combo 1
+    <banner>
+        url /bde-header/header.html
+        height 82
+    </banner>
 </site>
 
 <job_new>
