--- a/baseliner_test.conf
+++ b/baseliner_test.conf
@@ -7,6 +7,7 @@ saml_header samlv20
 user_case lc
 logo_filename logo_test.png
 dec_key Honorificabilitudinitatibus
+bde_scm_web http://wbetest.bde.es
 
 email_override q74611x@correo.interno
 
