--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -9,10 +9,9 @@ db_retry_frequency 15
 bde_scm_web http://wbeante.bde.es
 
 email_override q74611x@correo.interno
-email_override q74612x@correo.interno
 email_override infroox@correo.interno
 email_override infsbm@correo.interno
-email_override infaumx@correo.interno
+email_override qborro@correo.interno
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=alfsv061;sid=ALF0;port=1521
