add qbborro to email override

--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -11,7 +11,7 @@ bde_scm_web http://wbeante.bde.es
 email_override q74611x@correo.interno
 email_override infroox@correo.interno
 email_override infsbm@correo.interno
-email_override qborro@correo.interno
+email_override qbborro@correo.interno
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=alfsv061;sid=ALF0;port=1521
