--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -14,7 +14,7 @@ bde_scm_web http://wbeprod.bde.es
 email_override q74611x@correo.interno
 email_override infroox@correo.interno
 email_override infsbm@correo.interno
-email_override qborro@correo.interno
+email_override qbborro@correo.interno
 
 <Model::Baseliner>
     connect_info        dbi:Oracle:host=expsv065;sid=EXP0;port=1521
