--- a/baseliner_ante.conf
+++ b/baseliner_ante.conf
@@ -9,6 +9,7 @@ db_retry_frequency 15
 bde_scm_web http://wbeante.bde.es
 
 email_override q74611x@correo.interno
+email_override infaumx@correo.interno
 email_override infroox@correo.interno
 email_override infsbm@correo.interno
 email_override qbborro@correo.interno
