--- a/baseliner_prod.conf
+++ b/baseliner_prod.conf
@@ -12,6 +12,7 @@ db_retry_frequency 15
 bde_scm_web http://wbeprod.bde.es
 
 email_override q74611x@correo.interno
+email_override infaumx@correo.interno
 email_override infroox@correo.interno
 email_override infsbm@correo.interno
 email_override qbborro@correo.interno
