--- a/baseliner.conf
+++ b/baseliner.conf
@@ -32,6 +32,7 @@ job_runner service.job.runner.simple.chain
 
 <Baseliner::View::JSON>
     decode_utf8 0
+    allow_blessed 1
 </Baseliner::View::JSON>
 
 <Model::Baseliner>
