create_user_session system

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -9,6 +9,8 @@ LongTruncOk 0
 host localhost
 web_host localhost
 job_runner service.job.runner.simple.chain
+web_url http://localhost:3000
+create_user_session 0
 
 # <job_new>
 #   default_baseline XXXXX
