menu.sqa disabled

--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -23,6 +23,7 @@ job_runner service.job.runner.chained.rule
     disabled_key menu.admin.core
     disabled_key menu.admin.baseline
     disabled_key menu.admin.service
+    disabled_key menu.sqa
 </registry>
 
 # bloqueamos la creacion de pases con estos providers
