Fixed some translations

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -21,7 +21,7 @@ create_user_session 0
 </PluginNamespace>
 
 <Plugin::I18N>
-    languages es
+    languages es en
     <maketext_options>
         Style gettext
         Decode 1
