Topic CACHE! Yay!!

--- a/baseliner_test.conf
+++ b/baseliner_test.conf
@@ -8,6 +8,7 @@ user_case lc
 logo_filename logo_test.png
 dec_key Honorificabilitudinitatibus
 bde_scm_web http://wbetest.bde.es
+cache 1
 
 email_override q74611x@correo.interno
 
