--- a/features/bde/bde.conf
+++ b/features/bde/bde.conf
@@ -24,6 +24,7 @@ job_runner service.job.runner.chained.rule
     disabled_key menu.admin.baseline
     disabled_key menu.admin.service
     disabled_key menu.sqa
+    disabled_key menu.help
 </registry>
 
 # bloqueamos la creacion de pases con estos providers
