--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = http://git.vasslabs.com/git/nature.ejava.git
 [submodule "features/clarive.core"]
 	path = features/clarive.core
-	url = http://git.vasslabs.com/git/clarive.core.git
+	url = http://clarive.vasslabs.com/git/clarive.core.git
 [submodule "features/uploader"]
 	path = features/uploader
 	url = http://git.vasslabs.com/git/uploader.git
