--- a/baseliner.conf
+++ b/baseliner.conf
@@ -7,7 +7,7 @@ LongReadLen 100000000
 LongTruncOk 0
 host localhost
 web_host localhost
-job_runner service.job.runner.simple.chain
+job_runner service.job.runner.rule
 web_url http://localhost:3000
 create_user_session 0
 
