--- a/baseliner.conf
+++ b/baseliner.conf
@@ -11,6 +11,10 @@ job_runner service.job.runner.rule
 web_url http://localhost:3000
 create_user_session 0
 
+<mdb>
+    index_options online
+</mdb>
+
 # <job_new>
 #   default_baseline XXXXX
 # </job_new>
