- ci encrypt_password and save_api_key - prefs option to save api_key - $c->user_ci, used for favorite saving - password_rules in config - all user table columns as CI attributes for fixing saving (data loss   when saving favorites)

--- a/baseliner.conf
+++ b/baseliner.conf
@@ -10,6 +10,9 @@ web_host localhost
 job_runner service.job.runner.rule
 web_url http://localhost:3000
 create_user_session 0
+# password_rule (?=.*[A-Z]+)(?=.*[0-9]+)(?=.*\W+)
+# password_min_length 6
+# password_rule_description 'Needs at least one uppercase, one number and one special character (dot,comma,etc.)
 
 <mdb>
     index_options online
