--- a/baseliner.conf
+++ b/baseliner.conf
@@ -14,9 +14,9 @@ create_user_session 0
 # password_min_length 6
 # password_rule_description 'Needs at least one uppercase, one number and one special character (dot,comma,etc.)
 
-<mdb>
+<mkv>
     index_options online
-</mdb>
+</mkv>
 
 # <job_new>
 #   default_baseline XXXXX
